fix: scroll on mobile

--- a/src/Components/Plug/plug.module.scss
+++ b/src/Components/Plug/plug.module.scss
@@ -1,8 +1,8 @@
 .container {
     position: relative;
-    height: 100vh;
-    width: 100vw;
-    // height: 100%;
+    height: 100%;
+    width: 100%;
+
     display: flex;
 
     justify-content: center;
@@ -102,7 +102,7 @@
 
         .content {
             position: initial;
-            width: 288px;
+            max-width: 288px;
             height: fit-content;
             grid-template-columns: auto;
             grid-template-rows: 228px 1fr;
