--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,18 @@
 @import "./assets/fonts/stylesheet.css";
 
+html,
+body,
+#root {
+    height: 100%;
+}
+
 body {
     margin: 0;
     padding: 0;
+
+    #root {
+        overflow: hidden;
+    }
 
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
@@ -15,4 +25,6 @@ body {
         overflow-wrap: break-word;
         white-space: pre-wrap;
     }
+
+
 }
